--- a/Framework/Messaging.Client.DataVirtualizationDemo/01.Messaging.Client.DataVirtualizationDemo.csproj
+++ b/Framework/Messaging.Client.DataVirtualizationDemo/01.Messaging.Client.DataVirtualizationDemo.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Syztem.ComponentModel.Client</RootNamespace>
-    <AssemblyName>Syztem.ComponentModel.Messaging.Client.DataVirtualizationDemo</AssemblyName>
+    <AssemblyName>Syztem.Messaging.Client.DataVirtualizationDemo</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
