--- a/Framework/Messaging.Client/03.Messaging.Client.csproj
+++ b/Framework/Messaging.Client/03.Messaging.Client.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Syztem</RootNamespace>
-    <AssemblyName>Syztem.ComponentModel.Messaging.Client</AssemblyName>
+    <AssemblyName>Syztem.Messaging.Client</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -30,7 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Syztem.ComponentModel.Messaging.Client.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Syztem.Messaging.Client.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
