--- a/Framework/Messaging.Processing/05.Messaging.Processing.csproj
+++ b/Framework/Messaging.Processing/05.Messaging.Processing.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Syztem</RootNamespace>
-    <AssemblyName>Syztem.ComponentModel.Messaging.Processing</AssemblyName>
+    <AssemblyName>Syztem.Messaging.Processing</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -30,7 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Syztem.ComponentModel.Messaging.Processing.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Syztem.Messaging.Processing.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
