--- a/Framework/Messaging.TestEngine/02.Messaging.TestEngine.csproj
+++ b/Framework/Messaging.TestEngine/02.Messaging.TestEngine.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Syztem</RootNamespace>
-    <AssemblyName>Syztem.ComponentModel.Messaging.TestEngine</AssemblyName>
+    <AssemblyName>Syztem.Messaging.TestEngine</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -38,7 +38,7 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <RunCodeAnalysis>true</RunCodeAnalysis>
-    <DocumentationFile>bin\Release\Syztem.ComponentModel.Messaging.TestEngine.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Syztem.Messaging.TestEngine.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
