--- a/Framework/Messaging.Unity/02.Messaging.Unity.csproj
+++ b/Framework/Messaging.Unity/02.Messaging.Unity.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Syztem</RootNamespace>
-    <AssemblyName>Syztem.ComponentModel.Messaging.Unity</AssemblyName>
+    <AssemblyName>Syztem.Messaging.Unity</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -36,7 +36,7 @@
     </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Syztem.ComponentModel.Messaging.Unity.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Syztem.Messaging.Unity.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
