--- a/ChessApplication/ChessApplication.BusinessLogicLayer.Messages/07.BusinessLogicLayer.Messages.csproj
+++ b/ChessApplication/ChessApplication.BusinessLogicLayer.Messages/07.BusinessLogicLayer.Messages.csproj
@@ -54,7 +54,7 @@
     <Compile Include="..\..\AssemblyInfo.solution.cs">
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
-    <Compile Include="..\ChessApplication.BusinessLogicLayer\Constraints.cs">
+    <Compile Include="..\ChessApplication.BusinessLogicLayer.Domain\Constraints.cs">
       <Link>Constraints.cs</Link>
     </Compile>
     <Compile Include="Challenges\AcceptChallengeCommand.cs" />
