--- a/ChessApplication/ChessApplication.InterfaceLayer/02.InterfaceLayer.csproj
+++ b/ChessApplication/ChessApplication.InterfaceLayer/02.InterfaceLayer.csproj
@@ -53,13 +53,13 @@
       <Project>{c2f7d41b-e748-4ec4-8ad4-0a7e25d7cdc0}</Project>
       <Name>07.Messaging</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ChessApplication.BusinessLogicLayer.Messages\05.BusinessLogicLayer.Messages.csproj">
+    <ProjectReference Include="..\ChessApplication.BusinessLogicLayer.Messages\07.BusinessLogicLayer.Messages.csproj">
       <Project>{8cc646be-da0d-4fdc-b21d-aaaa73079220}</Project>
-      <Name>05.BusinessLogicLayer.Messages</Name>
+      <Name>07.BusinessLogicLayer.Messages</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ChessApplication.BusinessLogicLayer\04.BusinessLogicLayer.csproj">
+    <ProjectReference Include="..\ChessApplication.BusinessLogicLayer.Domain\05.BusinessLogicLayer.Domain.csproj">
       <Project>{42af2c3e-3a00-4bd8-8aa5-d802a10f0c49}</Project>
-      <Name>04.BusinessLogicLayer</Name>
+      <Name>05.BusinessLogicLayer.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\ChessApplication.DataAccessLayer.Messages\09.DataAccessLayer.Messages.csproj">
       <Project>{b7f22563-2f52-4c61-a3e2-2eba0106d9fa}</Project>
