- Improved the API of the ConstraintValidator framework.

--- a/Framework/BuildingBlocks/02.BuildingBlocks.csproj
+++ b/Framework/BuildingBlocks/02.BuildingBlocks.csproj
@@ -60,8 +60,8 @@
     <Compile Include="Messaging\Constraints\DelegateConstraintBuilder.T2.cs" />
     <Compile Include="Messaging\Constraints\IConstraintWithErrorMessage.cs" />
     <Compile Include="Messaging\Constraints\IConstraintWithErrorMessage.T2.cs" />
-    <Compile Include="Messaging\Constraints\IMemberConstraint.T1.cs" />
-    <Compile Include="Messaging\Constraints\MemberConstraintEventArgs.cs" />
+    <Compile Include="Messaging\Constraints\IMemberConstraint.T2.cs" />
+    <Compile Include="Messaging\Constraints\MemberConstraintEventArgs.T1.cs" />
     <Compile Include="Messaging\Constraints\New.cs" />
     <Compile Include="Messaging\Constraints\TrueConstraint.T1.cs" />
     <Compile Include="StringTemplate.cs" />
@@ -69,31 +69,31 @@
     <Compile Include="StringTemplateLiteral.cs" />
     <Compile Include="StringTemplateVariable.cs" />
     <Compile Include="Messaging\Constraints\IConstraint.T1.cs" />
-    <Compile Include="Messaging\Constraints\IMemberConstraint.cs" />
-    <Compile Include="Messaging\Constraints\Member.T1.cs" />
+    <Compile Include="Messaging\Constraints\IMemberConstraint.T1.cs" />
+    <Compile Include="Messaging\Constraints\Member.T2.cs" />
     <Compile Include="Messaging\Constraints\MemberConstraints.cs" />
     <Compile Include="Messaging\Constraints\BooleanConstraints.cs" />
     <Compile Include="Messaging\Constraints\CollectionConstraints.cs" />
     <Compile Include="Messaging\Constraints\EnumerableConstraints.cs" />
-    <Compile Include="Messaging\Constraints\ConstraintValidator.cs" />
+    <Compile Include="Messaging\Constraints\ConstraintValidator.T1.cs" />
     <Compile Include="Messaging\Constraints\GuidConstraints.cs" />
     <Compile Include="Messaging\Constraints\IErrorMessageConsumer.cs" />
-    <Compile Include="Messaging\Constraints\IErrorMessageProducer.cs" />
-    <Compile Include="Messaging\Constraints\IMemberConstraintSet.cs" />
+    <Compile Include="Messaging\Constraints\IErrorMessageProducer.T1.cs" />
+    <Compile Include="Messaging\Constraints\IMemberConstraintSet.T1.cs" />
     <Compile Include="Messaging\Constraints\IMember.cs" />
     <Compile Include="Messaging\Constraints\RangeAdapter.T1.cs" />
     <Compile Include="Messaging\Constraints\ListConstraints.cs" />
-    <Compile Include="Messaging\Constraints\MemberConstraint.T2.cs" />
-    <Compile Include="Messaging\Constraints\MemberConstraintSet.cs" />
+    <Compile Include="Messaging\Constraints\MemberConstraint.T3.cs" />
+    <Compile Include="Messaging\Constraints\MemberConstraintSet.T1.cs" />
     <Compile Include="Messaging\Constraints\NullableConstraints.cs" />
     <Compile Include="Messaging\Constraints\StringConstraints.cs" />
     <Compile Include="Messaging\Constraints\DataErrorInfoBuilder.cs" />
     <Compile Include="Messaging\IMessage.cs" />
     <Compile Include="Messaging\IMessage.T1.cs" />
-    <Compile Include="Messaging\IMessageValidator.cs" />
+    <Compile Include="Messaging\IMessageValidator.T1.cs" />
     <Compile Include="Messaging\Message.cs" />
     <Compile Include="Messaging\Message.T1.cs" />
-    <Compile Include="Messaging\MessageValidator.cs" />
+    <Compile Include="Messaging\MessageValidator.T1.cs" />
     <Compile Include="SerializationInfoExtensions.cs" />
     <Compile Include="Messaging\DataErrorInfo.cs" />
     <Compile Include="Clocks\HighResolutionClock.cs" />
