- Implemented MemberConstraint.And() method. - Fixed all (implemented) failing tests.

--- a/Framework/BuildingBlocks.Server.Tests/03.BuildingBlocks.Server.Tests.csproj
+++ b/Framework/BuildingBlocks.Server.Tests/03.BuildingBlocks.Server.Tests.csproj
@@ -87,7 +87,7 @@
     <Compile Include="Messaging\MessageProcessorStub.cs" />
     <Compile Include="Messaging\MessageToStrategyMappingTest.cs" />
     <Compile Include="Messaging\Modules\MessageValidationModuleTest.cs" />
-    <Compile Include="Messaging\SampleApplicationProcessor.cs" />
+    <Compile Include="Messaging\SampleApplication\SampleApplicationProcessor.cs" />
     <Compile Include="Messaging\Modules\TransactionScopeModuleTest.cs" />
     <Compile Include="Messaging\MessageHandlerClassTest.cs" />
     <Compile Include="Messaging\MessageHandlerFactoryStub.cs" />
