- Implemented indirect value overloads to the Constraint library.

--- a/Framework/BuildingBlocks/02.BuildingBlocks.csproj
+++ b/Framework/BuildingBlocks/02.BuildingBlocks.csproj
@@ -50,17 +50,18 @@
     <Compile Include="Clocks\Clock.cs" />
     <Compile Include="Clocks\ClockScope.cs" />
     <Compile Include="Clocks\ClockWithOffset.cs" />
-    <Compile Include="Messaging\Constraints\AndConstraint.T3.cs" />
+    <Compile Include="Messaging\Constraints\AndConstraint.T4.cs" />
     <Compile Include="Messaging\Constraints\Comparable.T1.cs" />
     <Compile Include="Messaging\Constraints\Comparer.cs" />
-    <Compile Include="Messaging\Constraints\Constraint.T1.cs" />
-    <Compile Include="Messaging\Constraints\ConstraintWithErrorMessage.T2.cs" />
-    <Compile Include="Messaging\Constraints\DelegateConstraint.T2.cs" />
-    <Compile Include="Messaging\Constraints\DelegateConstraintBuilder.T2.cs" />
-    <Compile Include="Messaging\Constraints\DisplayFormatFactory.cs" />
-    <Compile Include="Messaging\Constraints\IConstraintWithErrorMessage.cs" />
-    <Compile Include="Messaging\Constraints\IConstraintWithErrorMessage.T2.cs" />
+    <Compile Include="Messaging\Constraints\Constraint.T2.cs" />
+    <Compile Include="Messaging\Constraints\ConstraintWithErrorMessage.T3.cs" />
+    <Compile Include="Messaging\Constraints\DelegateConstraint.T3.cs" />
+    <Compile Include="Messaging\Constraints\DelegateConstraintBuilder.T3.cs" />
+    <Compile Include="LambdaExpressionExtensions.cs" />
+    <Compile Include="Messaging\Constraints\IConstraintWithErrorMessage.T1.cs" />
+    <Compile Include="Messaging\Constraints\IConstraintWithErrorMessage.T3.cs" />
     <Compile Include="Messaging\Constraints\IMemberConstraint.T2.cs" />
+    <Compile Include="Messaging\Constraints\MemberWithValue.T2.cs" />
     <Compile Include="Messaging\Constraints\MemberConstraintEventArgs.T1.cs" />
     <Compile Include="Messaging\Constraints\New.cs" />
     <Compile Include="Messaging\Constraints\TrueConstraint.T1.cs" />
@@ -68,7 +69,7 @@
     <Compile Include="StringTemplateComponent.cs" />
     <Compile Include="StringTemplateLiteral.cs" />
     <Compile Include="StringTemplateVariable.cs" />
-    <Compile Include="Messaging\Constraints\IConstraint.T1.cs" />
+    <Compile Include="Messaging\Constraints\IConstraint.T2.cs" />
     <Compile Include="Messaging\Constraints\IMemberConstraint.T1.cs" />
     <Compile Include="Messaging\Constraints\Member.T2.cs" />
     <Compile Include="Messaging\Constraints\MemberConstraints.cs" />
