--- a/Framework/BuildingBlocks/02.BuildingBlocks.csproj
+++ b/Framework/BuildingBlocks/02.BuildingBlocks.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Clocks\Clock.cs" />
     <Compile Include="Clocks\ClockScope.cs" />
     <Compile Include="Clocks\ClockWithOffset.cs" />
+    <Compile Include="Messaging\CommandExecutionException.cs" />
     <Compile Include="Messaging\Constraints\AndConstraint.T4.cs" />
     <Compile Include="Messaging\Constraints\Comparable.T1.cs" />
     <Compile Include="Messaging\Constraints\Comparer.cs" />
@@ -65,6 +66,9 @@
     <Compile Include="Messaging\Constraints\MemberConstraintEventArgs.T1.cs" />
     <Compile Include="Messaging\Constraints\New.cs" />
     <Compile Include="Messaging\Constraints\TrueConstraint.T1.cs" />
+    <Compile Include="Messaging\FunctionalException.cs" />
+    <Compile Include="Messaging\InvalidMessageException.cs" />
+    <Compile Include="Messaging\AuthorizationFailedException.cs" />
     <Compile Include="StringTemplate.cs" />
     <Compile Include="StringTemplateComponent.cs" />
     <Compile Include="StringTemplateLiteral.cs" />
