Implemented the DelegateConstraint class.

--- a/Framework/BuildingBlocks.Tests/01.BuildingBlocks.Tests.csproj
+++ b/Framework/BuildingBlocks.Tests/01.BuildingBlocks.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Constraints\BasicConstraintsTest.IsSmallerThan.cs" />
     <Compile Include="Constraints\BooleanConstraintsTest.cs" />
     <Compile Include="Constraints\ConstraintTest.cs" />
+    <Compile Include="Constraints\DelegateConstraintTest.cs" />
     <Compile Include="Constraints\OrConstraintTest.cs" />
     <Compile Include="IdentifierTest.cs" />
     <Compile Include="Messaging\ConstraintValidatorExtensions.cs" />
